<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/globos"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/iv_personaje"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/manzana" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/iv_personaje"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:background="@drawable/fondoet"
        android:ems="10"
        android:hint="@string/str_c_mo_te_llamas"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_jugar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/et_nombre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:background="@drawable/fondoboton"
        android:onClick="jugar"
        android:text="@string/str_jugar"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_BestScore"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/btn_jugar"
        android:layout_marginTop="106dp"
        android:background="@drawable/fondoet" />
</RelativeLayout>